vendor/pin-project-1.0.7/tests/ui/pinned_drop/call-drop-inner.rs
use std::pin::Pin;

use pin_project::{pin_project, pinned_drop};

#[pin_project(PinnedDrop)]
struct Struct {
    f: bool,
}

#[pinned_drop]
impl PinnedDrop for Struct {
    fn drop(mut self: Pin<&mut Self>) {
        __drop_inner(__self);
    }
}

fn main() {}
